Lab-01 Completed: Add Multiple HTML Files
Added initial files for Lab-01 personal website, including index, contact, projects, and resume HTML pages, a shared navigation bar, a profile image, and a basic CSS file.

--- a/Lab-01/index.html
+++ b/Lab-01/index.html
@@ -1,15 +1,26 @@
 <!doctype html>
 <html lang="en">
+
+<nav>
+    <a href="index.html">Home</a> |
+    <a href="projects/index.html">Projects</a> |
+    <a href="contact/index.html">Contact</a> |
+    <a href="resume/index.html">Resume</a>
+</nav>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dongting: Personal site and portfolio</title>
+</head>
+
+<body>
     <h1>Dongting</h1>
     <p>Hello! I’m Dongting, a master’s student in Data Science at UC San Diego. I apply data and computation to social-science and humanities questions - using visualization and human-centered design to study people, communication, and social systems - and I like building simple tools that make data easier to understand.</p>
-</head>
-<body>
 
+    <img src="images/Lab-01_Image.JPG" alt="A photo of me taken in Sequoia" width="600">
 </body>
+
 </html>
