--- a/Lab-02/contact/index.html
+++ b/Lab-02/contact/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<nav>
+<head>
+    <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
-    <a href="../contact/index.html">Contact</a> |
+    <a class="current" aria-current="page" href="../contact/index.html">Contact</a> |
     <a href="../resume/index.html">Resume</a>
-</nav>
+    </nav>
 
-<head>
     <meta charset="UTF-8">
     <title>Contact</title>
 </head>
