--- a/Lab-02/index.html
+++ b/Lab-02/index.html
@@ -1,22 +1,23 @@
 <!doctype html>
 <html lang="en">
 
-<nav>
-    <a href="index.html">Home</a> |
-    <a href="projects/index.html">Projects</a> |
-    <a href="contact/index.html">Contact</a> |
-    <a href="resume/index.html">Resume</a>
-</nav>
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Dongting: Personal site and portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <nav>
+    <a class="current" aria-current="page" href="index.html">Home</a> |
+    <a href="projects/index.html">Projects</a> |
+    <a href="contact/index.html">Contact</a> |
+    <a href="resume/index.html">Resume</a>
+    </nav>
+
     <h1>Dongting</h1>
     <p>Hello! I’m Dongting, a master’s student in Data Science at UC San Diego. I apply data and computation to social-science and humanities questions - using visualization and human-centered design to study people, communication, and social systems - and I like building simple tools that make data easier to understand.</p>
 
