--- a/Lab-02/projects/index.html
+++ b/Lab-02/projects/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<nav>
-    <a href="../index.html">Home</a> |
-    <a href="../projects/index.html">Projects</a> |
-    <a href="../contact/index.html">Contact</a> |
-    <a href="../resume/index.html">Resume</a>
-</nav>
-
 <head>
     <meta charset="UTF-8">
     <title>Projects</title>
 </head>
 <body>
+    <nav>
+    <a href="../index.html">Home</a> |
+    <a class="current" aria-current="page" href="../projects/index.html">Projects</a> |
+    <a href="../contact/index.html">Contact</a> |
+    <a href="../resume/index.html">Resume</a>
+    </nav>
+
     <h1>Projects</h1>
 </body>
 </html>
