--- a/Lab-02/resume/index.html
+++ b/Lab-02/resume/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<nav>
-    <a href="../index.html">Home</a> |
-    <a href="../projects/index.html">Projects</a> |
-    <a href="../contact/index.html">Contact</a> |
-    <a href="../resume/index.html">Resume</a>
-</nav>
-
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
 </head>
 
 <body>
+    <nav>
+    <a href="../index.html">Home</a> |
+    <a href="../projects/index.html">Projects</a> |
+    <a href="../contact/index.html">Contact</a> |
+    <a class="current" aria-current="page" href="../resume/index.html">Resume</a>
+    </nav>
 
     <h1>Dongting Cai</h1>
     <p>San Diego, CA</p>
