Lab-02 Update: Finish Step 3 & Minor Fix
Finish Lab 02 - Step 3: Contact form layout and fixed the CSS issues that might not apply to all pages

--- a/Lab-02/contact/index.html
+++ b/Lab-02/contact/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <title>Contact</title>
+    <link rel="stylesheet" href="../style.css">
+</head>
+<body>
+
     <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
@@ -9,30 +15,28 @@
     <a href="../resume/index.html">Resume</a>
     </nav>
 
-    <meta charset="UTF-8">
-    <title>Contact</title>
-</head>
-<body>
     <h1>Contact</h1>
 
     <form action="mailto:docai@ucsd.edu" method="post" enctype="text/plain">
+
         <label>
-            Your Email:
-            <input type="email" name="email" required>
+            <span>Your email</span>
+            <input type="email" name="email" autocomplete="email" required>
         </label>
 
         <label>
-            Subject:
+            <span>Subject</span>
             <input name="subject" required>
-            </label>
-
-        <label>
-            Message:
-            <textarea name="body" rows="5" cols="30" required></textarea>
         </label>
 
-        <button>Send</button>
+        <label>
+            <span>Message</span>
+            <textarea name="body" rows="6" required></textarea>
+        </label>
+
+        <button type="submit">Send</button>
     </form>
+
 
 </body>
 </html>
