Lab-03 Update: Complete
Completed Lab-03. Still need to revise later for minor issues.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       --panel: #0f1630;
       --muted: #93a1b5;
       --text: #e9eef9;
-      --accent: #7aa2ff;
+      --accent: #5593ff;
       --accent-2: #46e0a2;
       --ring: rgba(122, 162, 255, .45);
       --card: #121a3b;
