--- a/Lab-03/contact/index.html
+++ b/Lab-03/contact/index.html
@@ -7,17 +7,9 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-
-    <nav>
-    <a href="../index.html">Home</a> |
-    <a href="../projects/index.html">Projects</a> |
-    <a class="current" aria-current="page" href="../contact/index.html">Contact</a> |
-    <a href="../resume/index.html">Resume</a>
-    </nav>
-
     <h1>Contact</h1>
 
-    <form action="mailto:docai@ucsd.edu" method="post" enctype="text/plain">
+    <form action="mailto:docai@ucsd.edu" method="get">
 
         <label>
             <span>Your email</span>
@@ -37,6 +29,6 @@
         <button type="submit">Send</button>
     </form>
 
-
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
