--- a/Lab-03/index.html
+++ b/Lab-03/index.html
@@ -11,17 +11,12 @@
 </head>
 
 <body>
-    <nav>
-    <a class="current" aria-current="page" href="index.html">Home</a> |
-    <a href="projects/index.html">Projects</a> |
-    <a href="contact/index.html">Contact</a> |
-    <a href="resume/index.html">Resume</a>
-    </nav>
-
     <h1>Dongting</h1>
     <p>Hello! I’m Dongting, a master’s student in Data Science at UC San Diego. I apply data and computation to social-science and humanities questions - using visualization and human-centered design to study people, communication, and social systems - and I like building simple tools that make data easier to understand.</p>
 
     <img src="images/Lab-01_Image.JPG" alt="A photo of me taken in Sequoia" width="600">
+
+    <script type="module" src="global.js"></script>
 </body>
 
 </html>
