--- a/Lab-03/projects/index.html
+++ b/Lab-03/projects/index.html
@@ -7,13 +7,6 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <nav>
-    <a href="../index.html">Home</a> |
-    <a class="current" aria-current="page" href="../projects/index.html">Projects</a> |
-    <a href="../contact/index.html">Contact</a> |
-    <a href="../resume/index.html">Resume</a>
-    </nav>
-
     <h1>Projects</h1>
 
     <div class="projects">
@@ -102,5 +95,7 @@
                 neque non!</p>
         </article>
     </div>
+
+    <script type="module" src="../global.js"></script>
 </body>
 </html>
