Home Page Update: Project-02
Add an override link to the home page for Project-02.

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     const PATH_OVERRIDES = {
       // 'Lab-02': 'Lab-02/overview.html',
       'Project-01': 'Project-01/Final/final_project1_altair_2.html',
+      'Project-02': 'Project-02/Final/project2_report.html',
     };
     const TITLE_OVERRIDES = {
       // 'Lab-02': 'Lab 02 • Interaction & Critique',
