Lab-04 Update: Finish Step 1 & 2

--- a/Lab-04/index.html
+++ b/Lab-04/index.html
@@ -17,6 +17,12 @@
     <img src="images/Lab-01_Image.JPG" alt="A photo of me taken in Sequoia" width="600">
 
     <script type="module" src="global.js"></script>
-</body>
 
+    <h2>Latest Projects</h2>
+    <div class="projects"><!-- JS injects 3 cards here --></div>
+
+    <!-- scripts -->
+    <script type="module" src="global.js"></script>
+    <script type="module" src="index.js" defer></script>
+</body>
 </html>
