Project-03 Update: Checkpoint Proposal Minor Update

--- a/Project-03/Checkpoint/earthquakes_checkpoint_index.html
+++ b/Project-03/Checkpoint/earthquakes_checkpoint_index.html
@@ -81,11 +81,15 @@
     <section class="panel">
       <h2>Dataset</h2>
       <ul class="list-tight">
-        <li><strong>Source:</strong> USGS ANSS ComCat Earthquake Catalog</li>
+        <li><strong>Source:</strong> USGS ANSS ComCat Earthquake Catalog:
+            Using <a href="https://earthquake.usgs.gov/fdsnws/event/1/#:~:text=API%20Documentation%20">USGS API</a></li>
         <li><strong>Time range:</strong> 1925‑01‑01 to 2025‑11‑02 (century scope)</li>
         <li><strong>Region:</strong> United States incl. Alaska, Hawaii, and territories</li>
         <li><strong>Checkpoint subset:</strong> <span class="badge">M ≥ 4.5</span> (smaller file, faster EDA)</li>
         <li><strong>Fields used:</strong> time, latitude, longitude, magnitude, depth, place, region</li>
+        <li><strong>Filtered Dataset (by Dongting):
+        </strong> <a href="us_earthquakes_m4.5_complete.csv" download="us_earthquakes_m4.5_complete.csv">Download Here</a>
+        </li>
       </ul>
     </section>
 
