Project-03 Update: Checkpoint Update

--- a/Project-03/Checkpoint/earthquakes_checkpoint_index.html
+++ b/Project-03/Checkpoint/earthquakes_checkpoint_index.html
@@ -56,15 +56,20 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>A Century of U.S. Earthquakes (Checkpoint)</h1>
+      <h1>DSC 209R, Project 3</h1>
       <div class="meta">
-        <div><span class="badge">Project</span> DSC 209R Project 3</div>
-        <div><span class="badge">Team</span> Group&nbsp;7 (Proposed Idea by Dongting)</div>
+        <div><span class="badge">Project Topic</span>A Century of U.S. Earthquakes: Interactive Map of 100 Years of Earthquake Activity (M≥4.5)</div>
+        <div><span class="badge">Team</span> Group&nbsp;7</div>
         <div><span class="badge">Last Update</span> Nov 2, 2025 12:30 PT</div>
       </div>
     </header>
 
     <section class="panel">
+      <h2>Key Question:</h2>
+      <p>
+        “What are the patterns in the frequency and magnitude of earthquakes across different
+        regions of the United States over the past 100 years?”
+      </p>
       <h2>Project Goal (Final Submission)</h2>
       <p>
         Build an interactive <strong>D3.js</strong> map of U.S. earthquakes over the past 100 years
@@ -87,11 +92,12 @@
         <li><strong>Region:</strong> United States incl. Alaska, Hawaii, and territories</li>
         <li><strong>Checkpoint subset:</strong> <span class="badge">M ≥ 4.5</span> (smaller file, faster EDA)</li>
         <li><strong>Fields used:</strong> time, latitude, longitude, magnitude, depth, place, region</li>
-        <li><strong>Filtered Dataset (by Dongting):
+        <li><strong>Filtered Dataset:
         </strong> <a href="us_earthquakes_m4.5_complete.csv" download="us_earthquakes_m4.5_complete.csv">Download Here</a>
         </li>
       </ul>
     </section>
+
 
     <section class="panel">
       <h2>Exploratory Graphs (for Checkpoint)</h2>
