Project-03 Update: Checkpoint Update

--- a/Project-03/Checkpoint/earthquakes_checkpoint_index.html
+++ b/Project-03/Checkpoint/earthquakes_checkpoint_index.html
@@ -56,19 +56,18 @@
 <body>
   <div class="wrap">
     <header>
-      <h1>DSC 209R, Project 3</h1>
+      <h1>A Century of U.S. Earthquakes: Interactive Map of 100 Years of Earthquake Activity (Mw≥4.5)</h1>
       <div class="meta">
-        <div><span class="badge">Project Topic</span>A Century of U.S. Earthquakes: Interactive Map of 100 Years of Earthquake Activity (M≥4.5)</div>
-        <div><span class="badge">Team</span> Group&nbsp;7</div>
-        <div><span class="badge">Last Update</span> Nov 2, 2025 12:30 PT</div>
+        <div><span class="badge">Group&nbsp;7</span> Dongting Cai, Albab Newaz, Chiu-Chiu (Jojo) Lin, Conner Houghtby</div>
+        <div><span class="badge">Course</span> DSC 209R, Project 3 </div>
       </div>
     </header>
 
     <section class="panel">
-      <h2>Key Question:</h2>
+      <h2>Key Question</h2>
       <p>
         “What are the patterns in the frequency and magnitude of earthquakes across different
-        regions of the United States over the past 100 years?”
+        regions of the United States over the past 100 years? (Mw≥4.5)”
       </p>
       <h2>Project Goal (Final Submission)</h2>
       <p>
@@ -88,10 +87,11 @@
       <ul class="list-tight">
         <li><strong>Source:</strong> USGS ANSS ComCat Earthquake Catalog:
             Using <a href="https://earthquake.usgs.gov/fdsnws/event/1/#:~:text=API%20Documentation%20">USGS API</a></li>
-        <li><strong>Time range:</strong> 1925‑01‑01 to 2025‑11‑02 (century scope)</li>
-        <li><strong>Region:</strong> United States incl. Alaska, Hawaii, and territories</li>
-        <li><strong>Checkpoint subset:</strong> <span class="badge">M ≥ 4.5</span> (smaller file, faster EDA)</li>
+        <li><strong>Time range:</strong> 100 years (January 1, 1925 - November 2, 2025)</li>
+        <li><strong>Region:</strong> United States, including Alaska, Hawaii, Puerto Rico, and the US Virgin Islands</li>
+        <li><strong>Checkpoint subset:</strong> <span class="badge">M ≥ 4.5</span> </li>
         <li><strong>Fields used:</strong> time, latitude, longitude, magnitude, depth, place, region</li>
+          <li><strong>Data Insights:</strong> 11,859 earthquakes recorded in the filtered dataset (M≥4.5) over the past century.</li>
         <li><strong>Filtered Dataset:
         </strong> <a href="us_earthquakes_m4.5_complete.csv" download="us_earthquakes_m4.5_complete.csv">Download Here</a>
         </li>
