Lab-06 Update: Step 5

--- a/Lab-06/meta/index.html
+++ b/Lab-06/meta/index.html
@@ -29,6 +29,10 @@
 
       <!-- Later steps will render charts below -->
       <div id="charts"></div>
+
+      <p id="selection-count">No commits selected</p>
+      <dl id="language-breakdown" class="stats"></dl>
+
     </main>
 
     <script src="../global.js" type="module"></script>
