--- a/Lab-07/index.html
+++ b/Lab-07/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bikewatching</title>
+
+    <!-- Global layout styles -->
     <link rel="stylesheet" href="global.css" />
+
+    <!-- Map-specific styles -->
+    <link rel="stylesheet" href="map.css" />
+
+    <!-- Mapbox GL JS CSS -->
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
+
+    <!-- Favicon -->
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+
+    <!-- Our Mapbox JS module -->
+    <script src="map.js" type="module"></script>
   </head>
+
   <body>
-    <h1>🚲 Bikewatching</h1>
-    <p>
-      An interactive Mapbox visualization of Boston & Cambridge Bluebikes traffic
-      for DSC 209R Lab 7.
-    </p>
+  <div id="map"></div>
   </body>
+
 </html>
