--- a/Lab-07/index.html
+++ b/Lab-07/index.html
@@ -25,9 +25,34 @@
   </head>
 
   <body>
+    <header>
+      <h1>🚲️ Bikewatching</h1>
+
+      <label class="time-filter">
+        <span class="time-filter-label">Filter by time:</span>
+        <input
+          type="range"
+          id="time-slider"
+          min="-1"
+          max="1440"
+          value="-1"
+        />
+        <span class="time-display">
+          <time id="selected-time"></time>
+          <em id="any-time">(any time)</em>
+        </span>
+      </label>
+    </header>
+
     <div id="map">
       <svg></svg>
     </div>
-  </body>
 
+    <div class="legend">
+      <div style="--departure-ratio: 1">More departures</div>
+      <div style="--departure-ratio: 0.5">Balanced</div>
+      <div style="--departure-ratio: 0">More arrivals</div>
+    </div>
+
+  </body>
 </html>
