Lab-08 Update: Step 1
Introduced a time slider UI in index.html and supporting logic in index.js to allow users to filter and visualize commits up to a selected date. The scatter plot and language breakdown now update dynamically as the slider is adjusted. Added CSS transitions for smoother dot radius changes in the chart.

--- a/Lab-08/meta/index.html
+++ b/Lab-08/meta/index.html
@@ -13,6 +13,21 @@
       <h1>Meta</h1>
       <p>This page will show summary stats & charts about this repo.</p>
 
+      <!-- Step 1: time slider for evolution visualization -->
+      <div id="commit-filter">
+        <label for="commit-progress">
+          Show commits until:
+          <input
+            id="commit-progress"
+            type="range"
+            min="0"
+            max="100"
+            value="100"
+          />
+          <time id="commit-progress-time"></time>
+        </label>
+      </div>
+
       <!-- Step 1 will render stats here -->
       <div id="stats"></div>
 
