--- a/Lab-08/meta/index.html
+++ b/Lab-08/meta/index.html
@@ -50,8 +50,13 @@
           <dt>Lines</dt><dd id="commit-lines"></dd>
         </dl>
 
-        <p id="selection-count">No commits selected</p>
-        <dl id="language-breakdown" class="stats"></dl>
+        <section id="selection-panel">
+          <p id="selection-count">
+            Select commits in the chart above to view details.
+          </p>
+          <dl id="language-breakdown" class="stats"></dl>
+        </section>
+
       </div>
     </div>
 
